pro/src/ui-kit/DialogBuilder/DialogBuilder.module.scss
@use "styles/mixins/_a11y.scss" as a11y;
@use "styles/mixins/_rem.scss" as rem;
@use "styles/variables/_z-index.scss" as zIndex;
@use "styles/mixins/_size.scss" as size;
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/mixins/_outline.scss" as outline;

$drawer-width: rem.torem(684px);
$animation-duration: 0.3s;
$animation-timing-function: ease-in-out;

@keyframes slidein {
  from {
    transform: translate($drawer-width);
  }

  to {
    transform: translate(0);
  }
}

@keyframes fadein {
  from {
    background-color: transparent;
  }

  to {
    background-color: var(--color-background-overlay);
  }
}

.dialog-builder-title-container {
  display: flex;
  align-items: baseline;

  &-visually-hidden {
    @include a11y.visually-hidden;
  }
}

.dialog-builder-title {
  @include fonts.title3;

  margin-bottom: var(--size-spacing-l);
  padding-right: rem.torem(36px);
}

.dialog-builder-section {
  min-height: 100%;
  display: flex;
  flex-direction: column;
}

.dialog-builder-footer {
  border-top: rem.torem(1px) solid var(--color-border-subtle);
  padding-top: var(--size-spacing-xl);
}

.dialog-builder-overlay {
  background-color: var(--color-background-overlay);
  display: grid;
  align-items: center;
  justify-content: center;
  z-index: zIndex.$modal-z-index;
  position: fixed;
  width: 100vw;
  inset: 0;
  overflow: auto;

  @media not (prefers-reduced-motion) {
    &.dialog-builder-overlay-drawer[data-state="open"] {
      animation-duration: $animation-duration;
      animation-name: fadein;
      animation-timing-function: $animation-timing-function;
    }
  }
}

.dialog-builder-content {
  background-color: var(--color-background-default);
  border-radius: var(--size-border-radius-m);
  position: relative;
  width: initial;
  margin: var(--size-spacing-xxl) auto;
  padding: var(--size-spacing-l);
}

.dialog-builder-overlay-drawer {
  justify-content: flex-end;
}

.dialog-builder-overlay-drawer > .dialog-builder-content {
  border-radius: 0;
  width: $drawer-width;
  max-width: 100vw;
  margin: 0;
  height: 100%;

  @media not (prefers-reduced-motion) {
    &[data-state="open"] {
      animation-duration: $animation-duration;
      animation-name: slidein;
      animation-timing-function: $animation-timing-function;
    }
  }
}

.dialog-builder-close-container {
  position: absolute;
  top: rem.torem(16px);
  right: rem.torem(16px);
}

.dialog-builder-close {
  align-items: center;
  background-color: transparent;
  border: none;
  display: inline-flex;
  justify-content: center;
  cursor: pointer;
  position: relative;
  z-index: zIndex.$modal-close-z-index;

  &-icon {
    width: rem.torem(24px);
    height: rem.torem(24px);
    color: var(--color-icon-default);
  }

  &:focus-visible {
    @include outline.focus-outline;
  }
}

@media screen and (min-width: size.$tablet) {
  .dialog-builder-content {
    padding: size.$dialog-box-padding;
  }

  .dialog-builder-close-container {
    top: size.$dialog-box-padding;
    right: size.$dialog-box-padding;
  }
}

@media screen and (min-width: size.$tablet) {
  .dialog-builder-content {
    min-width: rem.torem(534px);
  }
}

